<resources>
    <string name="app_name">The Quiz</string>

    <!-- Home Activity -->
    <string name="action_settings">Settings</string>
    <string name="RegisterButton">Register</string>
    <string name="StartButton">Start</string>
    <string name="LeaderBoardButton">Leaderboard</string>

    <!-- Questions Activity -->
    <string name="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="answer1">1</string>
    <string name="answer2">2</string>
    <string name="answer3">3</string>
    <string name="answer4">4</string>
    <string name="cheat">Cheat</string>
    <string name="username">Username</string>
    <string name="score">0</string>
    <string name="skip">Skip</string>
    <string name="title_activity_login">Sign in</string>
    <string name="buttonNext">Next</string>

    <!-- Strings related to login -->
    <string name="username_form">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Spinner related strings -->
    <string name="spinner_prompt">Select a question</string>
    <string name="title_activity_finish">Finish</string>

    <!-- Finish activity -->
    <string name="scoreTitle">Score:</string>
    <string name="congrats_message">Your score:</string>

    <string name="singleplayer">Single player</string>
    <string name="multiplayer">Multi player</string>
    <string name="modeselection">Quiz Mode</string>
    <string name="username_leaderboard">Username</string>
    <string name="score_leaderboard">Score</string>
    <string name="buttonAnonymousStart">Anonymous Start</string>
    <string name="playernumber">Player 1</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="finishButton">Finish</string>
    <string name="nextButton">Next</string>
    <string name="tvDefaultPlayerNumber">Player 1</string>
    <string name="playerString">"Player "</string>
</resources>
