<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mode_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ana_mariavoicila.quizapp.ModeSelection">

    <Button
        android:text="@string/multiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="61dp"
        android:layout_marginEnd="61dp"
        android:id="@+id/buttonMultiPlayer"
        android:layout_alignTop="@+id/buttonSinglePlayer" />

    <Button
        android:text="@string/singleplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSinglePlayer"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/buttonMultiPlayer"
        android:layout_toStartOf="@+id/buttonMultiPlayer" />

    <TextView
        android:text="@string/modeselection"
        android:textSize="14pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonMultiPlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:id="@+id/tvQuizmode"
        android:textAlignment="center" />
</RelativeLayout>
